# Neflix

./: .gitignore  README.md  database.db
ProjectModernCpp/: CMakeLists.txt  ProjectModernCpp.sln
ProjectModernCpp/ProjectModernCpp/: .~lock.netflix_titles.csv#  CMakeLists.txt  CSVMovie.h  Cluster.cpp  Cluster.h  CosineSimilarity.cpp  CosineSimilarity.h  Database.cpp  Database.h  LoginSuccessful.cpp  LoginSuccessful.h  LoginSuccessful.ui  Movie.cpp  Movie.h  MovieCategory.cpp  MovieCategory.h  MoviePage.cpp  MoviePage.h  MoviePage.ui  MovieReview.cpp  MovieReview.h  ParseUtil.h  Person.cpp  Person.h  ProjectModernCpp.cpp  ProjectModernCpp.h  ProjectModernCpp.qrc  ProjectModernCpp.ui  ProjectModernCpp.ui.autosave  ProjectModernCpp.vcxproj  ProjectModernCpp.vcxproj.filters  RecommandationWindow.cpp  RecommandationWindow.h  RecommandationWindow.ui  Register.cpp  Register.h  Register.ui  User.cpp  User.h  UserPreferences.cpp  (+11 more)
ProjectModernCpp/dependencies/: CMakeLists.txt
